--- a/VsIntegration2015/TechTalk.SpecFlow.VsIntegration.2015.csproj
+++ b/VsIntegration2015/TechTalk.SpecFlow.VsIntegration.2015.csproj
@@ -52,7 +52,7 @@
     <DefineConstants>$(DefineConstants);DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DeployExtension>True</DeployExtension>
+    <DeployExtension>False</DeployExtension>
     <Prefer32Bit>false</Prefer32Bit>
     <PlatformTarget>x86</PlatformTarget>
     <StartAction>Program</StartAction>
