--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,25 +1,26 @@
 <Project>
     <PropertyGroup>
-        <LangVersion>latest</LangVersion>
-        <TechTalk_Year>$([System.DateTime]::get_Now().get_Year())</TechTalk_Year>
-        <TechTalkCopyright>Copyright © 2009-$(TechTalk_Year) TechTalk</TechTalkCopyright>
+      <LangVersion>latest</LangVersion>
 
-        <SpecFlow_EnableStrongNameSigning>true</SpecFlow_EnableStrongNameSigning>
+      <SpecFlow_Copyright>Copyright © SpecFlow Team</SpecFlow_Copyright>
+      <SpecFlow_Authors>SpecFlow Team</SpecFlow_Authors>
+
+      <SpecFlow_EnableStrongNameSigning>true</SpecFlow_EnableStrongNameSigning>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Nerdbank.GitVersioning" Version="2.1.65" PrivateAssets="all"/>
     </ItemGroup>
     <PropertyGroup>
-        <Authors>TechTalk</Authors>
-        <Company>TechTalk</Company>
+        <Authors>$(SpecFlow_Authors)</Authors>
+        <Company>Tricentis</Company>
         <Product/>
         <PackageLicenseUrl>http://go.specflow.org/license</PackageLicenseUrl>
         <PackageProjectUrl>http://www.specflow.org</PackageProjectUrl>
         <PackageIconUrl>http://go.specflow.org/specflow-nuget-icon</PackageIconUrl>
-        <RepositoryUrl>https://github.com/techtalk/SpecFlow.VisualStudio</RepositoryUrl>
+        <RepositoryUrl>https://github.com/SpecFlowOSS/SpecFlow.VisualStudio</RepositoryUrl>
         <PackageTags>specflow bdd gherkin cucumber</PackageTags>
         <Description>SpecFlow VisualStudio Integration</Description>
-        <Copyright>$(TechTalkCopyright)</Copyright>
+        <Copyright>$(SpecFlow_Copyright)</Copyright>
     </PropertyGroup>
     
     <PropertyGroup Condition=" '$(SpecFlow_EnableStrongNameSigning)' == 'true'">
