--- a/IdeIntegration/TechTalk.SpecFlow.IdeIntegration.csproj
+++ b/IdeIntegration/TechTalk.SpecFlow.IdeIntegration.csproj
@@ -26,6 +26,6 @@
     <PackageReference Include="CommandLineParser" Version="2.3.0" />
     <PackageReference Include="Mono.Cecil" Version="0.9.5.3" />
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
-    <PackageReference Include="SpecFlow.CustomPlugin" Version="3.1.97" />
+    <PackageReference Include="SpecFlow.CustomPlugin" Version="3.3.23-beta-g2354e4874c" />
   </ItemGroup>
 </Project>
