--- a/UnitTests/VsIntegration.Implementation.UnitTests/TechTalk.SpecFlow.VsIntegration.Implementation.UnitTests.csproj
+++ b/UnitTests/VsIntegration.Implementation.UnitTests/TechTalk.SpecFlow.VsIntegration.Implementation.UnitTests.csproj
@@ -9,7 +9,7 @@
     <PackageReference Include="Moq" Version="4.10.1" />
     <PackageReference Include="NUnit" Version="3.11.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
-    <PackageReference Include="SpecFlow.CustomPlugin" Version="3.1.97" />
+    <PackageReference Include="SpecFlow.CustomPlugin" Version="3.3.23-beta-g2354e4874c" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\TechTalk.SpecFlow.VsIntegration.Implementation\TechTalk.SpecFlow.VsIntegration.Implementation.csproj" />
