--- a/SpecFlowStarterProjectTemplate/ProjectTemplate.csproj
+++ b/SpecFlowStarterProjectTemplate/ProjectTemplate.csproj
@@ -1,11 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>$targetframework$</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="SpecFlow" Version="3.3.30" />
     <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.3.30" />
+    $if$ ('$unittestprovider$' == 'runner')<PackageReference Include="SpecRun.SpecFlow" Version="3.3.17" />$endif$
+    $if$ ('$unittestprovider$' == 'xunit')<PackageReference Include="SpecFlow.xUnit" Version="3.3.30" />$endif$
+    $if$ ('$unittestprovider$' == 'nunit')<PackageReference Include="SpecFlow.NUnit" Version="3.3.30" />$endif$
+    $if$ ('$unittestprovider$' == 'mstest')<PackageReference Include="SpecFlow.MsTest" Version="3.3.30" />$endif$
   </ItemGroup>
 
   <ItemGroup>
