--- a/SpecFlowStarterProjectTemplate/ProjectTemplate.csproj
+++ b/SpecFlowStarterProjectTemplate/ProjectTemplate.csproj
@@ -8,7 +8,10 @@
     <PackageReference Include="SpecFlow" Version="3.3.30" />
     <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.3.30" />
     $if$ ('$unittestprovider$' == 'runner')<PackageReference Include="SpecRun.SpecFlow" Version="3.3.17" />$endif$
-    $if$ ('$unittestprovider$' == 'xunit')<PackageReference Include="SpecFlow.xUnit" Version="3.3.30" />$endif$
+    $if$ ('$unittestprovider$' == 'xunit')<PackageReference Include="SpecFlow.xUnit" Version="3.3.30" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    <PackageReference Include="xunit" Version="2.4.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />$endif$
     $if$ ('$unittestprovider$' == 'nunit')<PackageReference Include="SpecFlow.NUnit" Version="3.3.30" />$endif$
     $if$ ('$unittestprovider$' == 'mstest')<PackageReference Include="SpecFlow.MsTest" Version="3.3.30" />$endif$
   </ItemGroup>
