--- a/SpecFlowStarterProjectTemplate/ProjectTemplate.csproj
+++ b/SpecFlowStarterProjectTemplate/ProjectTemplate.csproj
@@ -12,7 +12,11 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />$endif$
-    $if$ ('$unittestprovider$' == 'nunit')<PackageReference Include="SpecFlow.NUnit" Version="3.3.30" />$endif$
+    $if$ ('$unittestprovider$' == 'nunit')<PackageReference Include="SpecFlow.NUnit" Version="3.3.30" />
+    <PackageReference Include="nunit" Version="3.12.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0"/>
+    $endif$
     $if$ ('$unittestprovider$' == 'mstest')<PackageReference Include="SpecFlow.MsTest" Version="3.3.30" />$endif$
   </ItemGroup>
 
