--- a/TechTalk.SpecFlow.VisualStudio.CodeBehindGenerator/TechTalk.SpecFlow.VisualStudio.CodeBehindGenerator.csproj
+++ b/TechTalk.SpecFlow.VisualStudio.CodeBehindGenerator/TechTalk.SpecFlow.VisualStudio.CodeBehindGenerator.csproj
@@ -14,6 +14,6 @@
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.3.0" />
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
-    <PackageReference Include="SpecFlow.CustomPlugin" Version="3.3.60-g900f3ea98a" />
+    <PackageReference Include="SpecFlow.CustomPlugin" Version="3.3.62-beta" />
   </ItemGroup>
 </Project>
