--- a/VsIntegration/TechTalk.SpecFlow.VsIntegration.csproj
+++ b/VsIntegration/TechTalk.SpecFlow.VsIntegration.csproj
@@ -90,7 +90,7 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>9.0.1</Version>
     </PackageReference>
-    <PackageReference Include="SpecFlow.CustomPlugin" Version="3.3.60-g900f3ea98a" />
+    <PackageReference Include="SpecFlow.CustomPlugin" Version="3.3.62-beta" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="WindowsBase" />
     <PackageReference Include="Microsoft.ApplicationInsights" Version="2.9.1" />
