--- a/VsIntegration2015/TechTalk.SpecFlow.VsIntegration.2015.csproj
+++ b/VsIntegration2015/TechTalk.SpecFlow.VsIntegration.2015.csproj
@@ -89,7 +89,7 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>9.0.1</Version>
     </PackageReference>
-    <PackageReference Include="SpecFlow.CustomPlugin" Version="3.3.60-g900f3ea98a" />
+    <PackageReference Include="SpecFlow.CustomPlugin" Version="3.3.62-beta" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
