--- a/IdeIntegration/TechTalk.SpecFlow.IdeIntegration.csproj
+++ b/IdeIntegration/TechTalk.SpecFlow.IdeIntegration.csproj
@@ -23,7 +23,8 @@
     <ProjectReference Include="..\TechTalk.SpecFlow.VisualStudio.CodeBehindGenerator\TechTalk.SpecFlow.VisualStudio.CodeBehindGenerator.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CommandLineParser" Version="2.3.0"/>
+    <PackageReference Include="CommandLineParser" Version="2.3.0" />
+    <PackageReference Include="Enums.NET" Version="3.0.3" />
     <PackageReference Include="Mono.Cecil" Version="0.9.5.3" />
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
     <PackageReference Include="SpecFlow.CustomPlugin" Version="1.9.0" />
