Refactor and update build and release pipelines - #1985
- move CI and PR trigger configs to YAML
- move executing unit tests to the build pipeline
- update used NuGet version to 5.8.0
- clean-up

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,17 @@ name: $(GitAssemblyInformationalVersion)
 
 resources:
 - repo: self
-  clean: true
+  clean: "true"
+
+trigger:
+  branches:
+    include:
+    - master
+
+pr:
+  branches:
+    include:
+    - '*'
 
 jobs:
 
