--- a/TechTalk.SpecFlow.VsIntegration.Implementation/TechTalk.SpecFlow.VsIntegration.Implementation.csproj
+++ b/TechTalk.SpecFlow.VsIntegration.Implementation/TechTalk.SpecFlow.VsIntegration.Implementation.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Microsoft.VisualStudio.SDK.Analyzers" Version="15.8.36" />
     <PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="16.0.102" />
     <PackageReference Include="SpecFlow.CustomPlugin" Version="1.9.0" />
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="WindowsBase" />
     <PackageReference Include="Microsoft.ApplicationInsights" Version="2.9.1" />
